# CryptoTrading

./: pyproject.toml  sarimax_forecasts.csv  trading.ipynb  utils.py
etl/: get_binance_spot.ipynb
