[project]
name = "cryptotrading"
version = "0.1.0"
description = "Basic trading strategies for cryptocurrencies"
authors = [
    {name = "Timur Zekokh",email = "timurzekokh@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "python-binance (>=1.0.34,<2.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "scipy (>=1.16.3,<2.0.0)",
    "ipython (>=9.8.0,<10.0.0)",
    "ipykernel (>=7.1.0,<8.0.0)",
    "statsmodels (>=0.14.6,<0.15.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
package-mode = false